position:fixed elements are not working correctly in an iframe
Categories
(Core :: Panning and Zooming, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox103 | --- | wontfix |
firefox104 | --- | wontfix |
firefox105 | --- | verified |
firefox106 | --- | verified |
People
(Reporter: jonas, Assigned: dlrobertson)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:103.0) Gecko/20100101 Firefox/103.0
Steps to reproduce:
Please take a look at my attached file iframe.html.
To reproduce the problem, please create an additional file and paste the comment content to open the iframe.html file in an iframe.
I think it is most reproducible on Windows 10. Also test the behavior with Firefox 102 to see the difference.
- Open your created file in Firefox.
- Click on the button. Your mouse icon changes when you hover over it, and the button is triggered.
- Scroll a little bit.
- Move your mouse over the button again.
Actual results:
The mouse icon does not change. The button is not triggered on (first) click.
Expected results:
The mouse icon should change and the button should be triggered.
If you do the same procedure on Firefox 102, you should see the problem.
I think the underlying problem is bigger, but this is the easiest way to show it.
Comment 1•10 months ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Web Painting' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Updated•10 months ago
|
Updated•10 months ago
|
Assignee | ||
Comment 2•10 months ago
|
||
Also test the behavior with Firefox 102 to see the difference.
Sorry, I'm not sure I follow this. Does this happen on 102? I was unable to reproduce the issue on Linux and macOS with the example I attached.
Hello Dan,
thanks for the fast response.
I can reproduce the issue also with your file at
- Windows 10
- Linux Debian 11.4
The issue only happen on 103. The issue is hard to see so I suggested to directly compare it with a previous version.
I created two videos to show the issue:
- Working example with 91.12.0esr: https://www.veed.io/view/e80de41d-b5f5-44ee-a936-b8a43feeb1ef
- Example with 103: https://www.veed.io/view/52fe4da1-a0de-41f8-885b-fe13fc7fcb3a
The issue looks small, but it feels like some parts of the browser thinks the element is on another position.
Also many of our customers reported the issue at our company website.
![]() |
||
Comment 4•10 months ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=598649d8d10a0508e363d6cadccd26ad4dd9bfa1&tochange=c6e364c416d75e4ad554a33c2fb2dcee388be54b
Suspect: Bug 1760368
Assignee | ||
Comment 5•10 months ago
|
||
(In reply to Alice0775 White from comment #4)
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=598649d8d10a0508e363d6cadccd26ad4dd9bfa1&tochange=c6e364c416d75e4ad554a33c2fb2dcee388be54bSuspect: Bug 1760368
Thanks! I also found the same result with mozregression.
(In reply to jonas from comment #3)
The issue only happen on 103. The issue is hard to see so I suggested to directly compare it with a previous version.
I created two videos to show the issue:
- Working example with 91.12.0esr: https://www.veed.io/view/e80de41d-b5f5-44ee-a936-b8a43feeb1ef
- Example with 103: https://www.veed.io/view/52fe4da1-a0de-41f8-885b-fe13fc7fcb3a
Thanks! This helped me reproduce the issue.
The issue looks small, but it feels like some parts of the browser thinks the element is on another position.
We recently landed some changes to the way we hit-test fixed elements in bug 1760368. I think this is actually a duplicate of bug 1772273 (See https://phabricator.services.mozilla.com/D148099).
Assignee | ||
Comment 6•10 months ago
|
||
Do not propogate the async transform components when calling
GetTransformToLastDispatchedPaint() on the parent.
Updated•10 months ago
|
Assignee | ||
Updated•10 months ago
|
Updated•10 months ago
|
Pushed by drobertson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aaa6074574fd Do not propogate transform components to GetTransformToLastDispatchedPaint(). r=botond
Comment 8•10 months ago
|
||
bugherder |
Updated•10 months ago
|
Updated•10 months ago
|
Comment 9•9 months ago
|
||
Reproduced the issue in Nightly 103.0a1 (build id: 20220606093709).
Verified - Fixed in Beta 105.0b5 and latest Nightly 106.0a1 (2022-08-31) using Windows 10 and Ubuntu 20.
Description
•