Bug 1782921 - Do not propogate transform components to GetTransformToLastDispatchedPaint(). r=botond

We currently pass the elements async transform components to the parent when
untransforming the async components for gecko. The async transform components
should not be propagated to the parent. The async transform of the parent
document impacts the position of an element (even in the fixed position case),
and as a result the layout and visual async transform should be used.

Differential Revision: https://phabricator.services.mozilla.com/D153692